--- a/Flashcards/appsettings.json
+++ b/Flashcards/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Flashcards;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=Flashcards;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
